Update Project at 12-09-2024

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <!-- NAV Section Start -->
+     <p class="headSection"></p>
     <nav id="nav">
        <div class="container">
             <div class="navWrapper">
@@ -46,18 +47,252 @@
                 <h1 class="montserrat_Bold">Choose <br>The Perfect <br>destinations.</h1>
                 <p class="montserrat_Regular">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation.
-
                 </p>
+                <div class="searchLocWrapper">
+                    <div class="searchWrapper">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <input type="text" name="search" id="search" class="search" placeholder="Enter your Location">
+                    </div>
+                    <img src="./images/bannerLocation.png" alt="Location" class="bannerLocation">
+                </div>
             </div>
         </div>
      </section>
     <!-- Banner Section End -->
-
+    <!-- Destination Section Start -->
+     <section id="destination">
+        <div class="container">
+            <div class="accommodation">
+                <div class="accommodationText">
+                    <h3 class="destinText">FEATURED DESTINATION</h3>
+                    <h2 class="destinationTitle montserrat_Bold">choose <br>The perfect accommodation.</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                    </p>
+                </div>
+                <div class="accommodationImage">
+                    <img src="./images/accommodationImage.png" alt="accommodationImage" class="accommodationImg">
+                </div>
+            </div>
+            <div class="desTour">
+                <div class="desTourLocation">
+                    <h3 class="montserrat_Bold">TRAVEL LOCATION</h3>
+                    <div class="destStar">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                </div>
+                <div class="desTourPrice">
+                    <div class="disTurePriceText">
+                        <p>Tour Price</p>
+                        <h3>$125,99</h3>
+                    </div>
+                    <div class="disTurePriceWithBtn">
+                        <a href="#" class="disBook montserrat_Bold">Book Now</a>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h2 class="disSpecPackage">Special Package</h2>
+                <p class="disSpecPackagePara">
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                </p>
+            </div>
+            <div class="cardWrapper">
+                <div class="cardItem">
+                    <div class="card">
+                        <div class="cardHead">
+                            <h3 class="cardTitle">STARTER</h3>
+                            <h3 class="cardTitlePrice">$9</h3>
+                            <p>Per Month</p>
+                        </div>
+                        <div class="cardBody">
+                            <ul>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon.png" alt="price List Icon">
+                                    <span>International Air Ticket.</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon.png" alt="price List Icon">
+                                    <span>Daily Continental Breakfast.</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon.png" alt="price List Icon">
+                                    <span>Lunch And Dinner</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon.png" alt="price List Icon">
+                                    <span>City Tour with Guide</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon-2.png" alt="price List Icon">
+                                    <span>09 Nights Hotel</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon-2.png" alt="price List Icon">
+                                    <span>Desert Safari & BBQ Dinner</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <a href="#" class="cardStart">GET STARTED</a>
+                    </div>
+                    <p class="cardDelivery">4 Days Trial Available</p>
+                </div>
+                <div class="cardItem">
+                    <div class="card">
+                        <div class="cardHead">
+                            <h3 class="cardTitle">STANDARD</h3>
+                            <h3 class="cardTitlePrice">$199</h3>
+                            <p>Per Month</p>
+                        </div>
+                        <div class="cardBody">
+                            <ul>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon.png" alt="price List Icon">
+                                    <span>International Air Ticket.</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon.png" alt="price List Icon">
+                                    <span>Daily Continental Breakfast.</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon.png" alt="price List Icon">
+                                    <span>Lunch And Dinner</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon.png" alt="price List Icon">
+                                    <span>City Tour with Guide</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon.png" alt="price List Icon">
+                                    <span>09 Nights Hotel</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon-2.png" alt="price List Icon">
+                                    <span>Desert Safari & BBQ Dinner</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <a href="#" class="cardStart">GET STARTED</a>
+                    </div>
+                    <p class="cardDelivery">4 Days Trial Available</p>
+                </div>
+                <div class="cardItem">
+                    <div class="card premiumBorder">
+                        <div class="cardHead">
+                            <h3 class="cardTitle premium">PREMIUM</h3>
+                            <h3 class="cardTitlePrice premium">$499</h3>
+                            <p class="premium">Per Month</p>
+                        </div>
+                        <div class="cardBody">
+                            <ul>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon-3.png" alt="price List Icon">
+                                    <span>International Air Ticket.</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon-3.png" alt="price List Icon">
+                                    <span>Daily Continental Breakfast.</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon-3.png" alt="price List Icon">
+                                    <span>Lunch And Dinner</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon-3.png" alt="price List Icon">
+                                    <span>City Tour with Guide</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon-3.png" alt="price List Icon">
+                                    <span>09 Nights Hotel</span>
+                                </li>
+                                <li class="cardListItem">
+                                    <img src="./images/priceListIcon-3.png" alt="price List Icon">
+                                    <span>Desert Safari & BBQ Dinner</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <a href="#" class="cardStart premiumBG">GET STARTED</a>
+                    </div>
+                    <p class="cardDelivery">4 Days Trial Available</p>
+                </div>
+            </div>
+        </div>
+        <img src="./images/destinationWaterMark.png" alt="WaterMark" class="destinationWatermark">
+     </section>
+    <!-- Destination Section End -->
+    <!-- FootPrint Section Start -->
+     <section id="footPrint">
+        <img src="./images/footPrintIllstration.png" alt="footPrintIllustration" class="footPrintIllustration">
+        <div class="footPrintWrapper">
+            <div class="container">
+                <div class="footPrintContent">
+                    <img src="./images/footPrintImage.png" alt="footPrintImage" class="footPrintImg">
+                    <div>
+                        <p class="footPrintSubTitle">FEATURED DESTINATIONS</p>
+                        <h3 class="footPrintTitle">TAKE ONLY <br> MEMORIES, LEAVE <br> ONLY FOOTPRINTS.</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing <br> elit, sed diam nonummy nibh euismod tincidunt ut <br> laoreet dolore magna aliquam erat volutpat.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
+    <!-- FootPrint Section End -->
+    <!-- Most Destination Section Start -->
+     <section id="mostDest">
+        <img src="./images/destinationWaterMark.png" alt="mostDestIllustration" class="mostDestIllustration">
+        <div class="mostDestWrapper">
+           <div class="container">
+                <h2 class="mostDestTitle">Most Destinations</h2>
+                <p class="mostDestPara">
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh <br> euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                </p>
+                <div class="itemsWrapper">
+                    <div class="item item_1">
+                        <img src="./images/item-1.jpg" alt="item" class="item1">
+                    </div>
+                    <div class="item item_2">
+                        <img src="./images/item-2.jpg" alt="item" class="item1">
+                    </div>
+                    <div class="item item_3">
+                        <img src="./images/item-3.jpg" alt="item" class="item1">
+                    </div>
+                    <div class="item item_4">
+                        <img src="./images/item-4.jpg" alt="item" class="item1">
+                    </div>
+                    <div class="item item_5">
+                        <img src="./images/item-5.jpg" alt="item" class="item1">
+                    </div>
+                    <div class="item item_6">
+                        <img src="./images/item-6.jpg" alt="item" class="item1">
+                    </div>
+                    <div class="item item_7">
+                        <img src="./images/item-7.jpg" alt="item" class="item1">
+                    </div>
+                    <div class="item item_8">
+                        <img src="./images/item-8.png" alt="item" class="item1">
+                    </div>
+                </div>
+           </div>
+        </div>
+     </section>
+    <!-- Most Destination Section End -->
 
 
 
     <!-- NAV Section Start -->
     <!-- NAV Section End -->
+
+
+
+
+
+
 
       <!-- font awesome CDN link -->
   <script src="https://kit.fontawesome.com/5e82e4ce8d.js" crossorigin="anonymous"></script>
