Update HTML & CSS File at 12-09-2024_2206

--- a/index.html
+++ b/index.html
@@ -282,7 +282,46 @@
         </div>
      </section>
     <!-- Most Destination Section End -->
+    <!-- Counter Section Start -->
+     <section id="counter">
+        <div class="counterContent">
+            <div class="container">
+                <div class="counterWrapper">
+                    <div>
+                        <h4 class="counterTitle">800K</h4>
+                        <p class="counterPara">SUBSCRIBERS</p>
+                    </div>
+                    <div>
+                        <h4 class="counterTitle">2.3 M</h4>
+                        <p class="counterPara">FOLLOWERS</p>
+                    </div>
+                    <div>
+                        <h4 class="counterTitle">1.7B</h4>
+                        <p class="counterPara">LIKES</p>
+                    </div>
+                    <div>
+                        <h4 class="counterTitle">4.5*</h4>
+                        <p class="counterPara">RATING</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
+    <!-- Counter Section End -->
+    
+    <!-- Group Section Start -->
+     <section id="groupPic">
+       <div class="groupPicContent">
+            <div class="container">
+                <div class="groupPicWrapper">
+                    <img src="./images/GroupPic-1.png" alt="Group">
+                    <img src="./images/GroupPic-2.png" alt="Group">
+                </div>
+            </div>
+       </div>
+     </section>
 
+    <!-- Group Section End -->
 
 
     <!-- NAV Section Start -->
